examples/type_system/failing/54_strict_any_param_rejected.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

public fn id(x: Any) -> Int {
    1
}

fn main() -> Unit {
}
